--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,40 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-08 Fri 12:10]
+#+CAPTION: Clock summary at [2019-03-08 Fri 15:03]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *71:51* |       |       | 100.0 |
+| *Total time*                                                 | *73:49* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 71:51   |       |       | 100.0 |
-| Active                                                       |         | 71:51 |       | 100.0 |
+| Stories                                                      | 73:49   |       |       | 100.0 |
+| Active                                                       |         | 73:49 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.0 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.1 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   5.2 |
-| Move generation model out of coding                          |         |       |  4:22 |   6.1 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   5.1 |
+| Move generation model out of coding                          |         |       |  4:22 |   5.9 |
 | Rename endomodel to just model                               |         |       |  2:11 |   3.0 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.5 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   4.4 |
-| Move injection processing out of coding                      |         |       | 18:39 |  26.0 |
+| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.4 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   4.3 |
+| Move injection processing out of coding                      |         |       | 18:39 |  25.3 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.3 |
-| Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
-| Add option for northwind tests                               |         |       |  0:54 |   1.3 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   7.3 |
-| Remove coding options                                        |         |       |  3:59 |   5.5 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  16.7 |
+| Move coding to generation model transform into orchestration |         |       |  0:33 |   0.7 |
+| Add option for northwind tests                               |         |       |  0:54 |   1.2 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   7.1 |
+| Remove coding options                                        |         |       |  3:59 |   5.4 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  16.3 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.4 |
-| Logging impact in tracing is blank                           |         |       |  0:50 |   1.2 |
+| Logging impact in tracing is blank                           |         |       |  0:50 |   1.1 |
 | Split operation reports from patches                         |         |       |  1:19 |   1.8 |
-| Add org mode support to diff reports                         |         |       |  1:13 |   1.7 |
+| Add org mode support to diff reports                         |         |       |  1:13 |   1.6 |
 | Add dry mode                                                 |         |       |  0:27 |   0.6 |
 | Split extraction model generation from code generation       |         |       |  0:29 |   0.7 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
-| Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.5 |
+| Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.4 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
-| Rework the system tests using diff mode                      |         |       |  4:10 |   5.8 |
+| Rework the system tests using diff mode                      |         |       |  6:08 |   8.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -964,6 +964,8 @@ actually mildly useful to know the number of lines of code etc.
 
 *** STARTED Rework the system tests using diff mode                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-08 Fri 13:09]--[2019-03-08 Fri 15:02] =>  1:53
+    CLOCK: [2019-03-08 Fri 12:43]--[2019-03-08 Fri 12:48] =>  0:05
     CLOCK: [2019-03-08 Fri 09:27]--[2019-03-08 Fri 11:39] =>  2:12
     CLOCK: [2019-03-08 Fri 08:35]--[2019-03-08 Fri 09:26] =>  0:51
     CLOCK: [2019-03-08 Fri 06:13]--[2019-03-08 Fri 07:20] =>  1:07
