--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,40 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-08 Fri 15:03]
+#+CAPTION: Clock summary at [2019-03-08 Fri 17:02]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *73:49* |       |       | 100.0 |
+| *Total time*                                                 | *75:48* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 73:49   |       |       | 100.0 |
-| Active                                                       |         | 73:49 |       | 100.0 |
-| Edit release notes for previous sprint                       |         |       |  1:27 |   2.0 |
-| Sprint and product backlog grooming                          |         |       |  1:32 |   2.1 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   5.1 |
-| Move generation model out of coding                          |         |       |  4:22 |   5.9 |
-| Rename endomodel to just model                               |         |       |  2:11 |   3.0 |
+| Stories                                                      | 75:48   |       |       | 100.0 |
+| Active                                                       |         | 75:48 |       | 100.0 |
+| Edit release notes for previous sprint                       |         |       |  1:27 |   1.9 |
+| Sprint and product backlog grooming                          |         |       |  1:32 |   2.0 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   4.9 |
+| Move generation model out of coding                          |         |       |  4:22 |   5.8 |
+| Rename endomodel to just model                               |         |       |  2:11 |   2.9 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.4 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   4.3 |
-| Move injection processing out of coding                      |         |       | 18:39 |  25.3 |
-| Create a extraction model post-processing chain              |         |       |  0:56 |   1.3 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   4.2 |
+| Move injection processing out of coding                      |         |       | 18:39 |  24.6 |
+| Create a extraction model post-processing chain              |         |       |  0:56 |   1.2 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.7 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.2 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   7.1 |
-| Remove coding options                                        |         |       |  3:59 |   5.4 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  16.3 |
-| Create a "run byproducts" directory                          |         |       |  1:01 |   1.4 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   6.9 |
+| Remove coding options                                        |         |       |  3:59 |   5.3 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  15.9 |
+| Create a "run byproducts" directory                          |         |       |  1:01 |   1.3 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.1 |
-| Split operation reports from patches                         |         |       |  1:19 |   1.8 |
+| Split operation reports from patches                         |         |       |  1:19 |   1.7 |
 | Add org mode support to diff reports                         |         |       |  1:13 |   1.6 |
 | Add dry mode                                                 |         |       |  0:27 |   0.6 |
-| Split extraction model generation from code generation       |         |       |  0:29 |   0.7 |
+| Split extraction model generation from code generation       |         |       |  0:29 |   0.6 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
-| Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
+| Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.4 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.4 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
-| Rework the system tests using diff mode                      |         |       |  6:08 |   8.3 |
+| Rework the system tests using diff mode                      |         |       |  8:07 |  10.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -964,6 +964,7 @@ actually mildly useful to know the number of lines of code etc.
 
 *** STARTED Rework the system tests using diff mode                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-08 Fri 15:03]--[2019-03-08 Fri 17:02] =>  1:59
     CLOCK: [2019-03-08 Fri 13:09]--[2019-03-08 Fri 15:02] =>  1:53
     CLOCK: [2019-03-08 Fri 12:43]--[2019-03-08 Fri 12:48] =>  0:05
     CLOCK: [2019-03-08 Fri 09:27]--[2019-03-08 Fri 11:39] =>  2:12
@@ -1002,6 +1003,12 @@ Notes:
   no writes or removes. prints out first 5 diffs to console.
 - enable diffing, reporting.
 - check how byproduct directory works with tests.
+- we cannot force all users to run system tests against reference
+  models. This basically would mean that if you want to use dogen from
+  git you'd have to also download reference models etc. We need to
+  hide this behind a feature switch.
+- we must now remember to always keep JSON models up to date or tests
+  will fail. This is probably a good thing.
 
 *** Consider adding tests for pipeline components                     :story:
 
@@ -2059,6 +2066,19 @@ In an ideal world, we should probably have a script that we run as
 part of =knit_and_stitch= that converts to tailor and then runs
 knitter on the models, so that we keep track of tailor breaks outside
 of JSON test models.
+
+*** Warn on transitive references to models used directly             :story:
+
+At present, when we reference a model B, we get all of the models it
+references. However, if model A (the target) is using types of say
+model C, it should reference it directly rather than via B. If B
+changes, A will break. It would be nice to have a warning for these
+types of referencing.
+
+*** Error on duplicate references                                     :story:
+
+We need to check to see what happens if you enter the same reference
+multiple times. We should error.
 
 *** Update static strings to string views                             :story:
 
