--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-09 Sat 07:23]
+#+CAPTION: Clock summary at [2019-03-09 Sat 07:39]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *79:27* |       |       | 100.0 |
+| *Total time*                                                 | *79:42* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 79:27   |       |       | 100.0 |
-| Active                                                       |         | 79:27 |       | 100.0 |
+| Stories                                                      | 79:42   |       |       | 100.0 |
+| Active                                                       |         | 79:42 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   1.8 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   1.9 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   4.7 |
@@ -29,7 +29,7 @@
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.2 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   4.0 |
-| Move injection processing out of coding                      |         |       | 18:39 |  23.5 |
+| Move injection processing out of coding                      |         |       | 18:39 |  23.4 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.2 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.7 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.1 |
@@ -46,7 +46,7 @@
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.4 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.3 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
-| Rework the system tests using diff mode                      |         |       | 11:46 |  14.8 |
+| Rework the system tests using diff mode                      |         |       | 12:01 |  15.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -987,6 +987,7 @@ actually mildly useful to know the number of lines of code etc.
 
 *** STARTED Rework the system tests using diff mode                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-09 Sat 07:24]--[2019-03-09 Sat 07:39] =>  0:15
     CLOCK: [2019-03-09 Sat 07:15]--[2019-03-09 Sat 07:23] =>  0:08
     CLOCK: [2019-03-09 Sat 06:06]--[2019-03-09 Sat 07:14] =>  1:08
     CLOCK: [2019-03-08 Fri 19:14]--[2019-03-08 Fri 20:19] =>  1:05
